--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- custom css -->
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!-- favicon -->
-    <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
     <title>Bootstrap Demo</title>
   </head>
   <body>
     <header class="header-section">
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#"><img src="./img/logo.png" alt="StackRoute" srcset=""></a>
+  <a class="navbar-brand" href="#"><img src="img/logo.png" alt="StackRoute" srcset=""></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>Menu
   </button>
@@ -66,7 +66,7 @@
         <div class="carousel-inner">
           <div class="carousel-item active">
             
-            <img src="./img/img1.jpg" class="d-block w-100" alt="...">
+            <img src="img/img1.jpg" class="d-block w-100" alt="...">
 
             <div class="carousel-caption d-none d-md-block mb-5">
               <h1>Full Stack Developer - JAVA</h1>
@@ -74,7 +74,7 @@
             </div>
           </div>      
         <div class="carousel-item">
-            <img src="./img/img2.jpeg" class="d-block w-100" alt="...">
+            <img src="img/img2.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h1>Full Stack Developer - .NET</h1>
               <a href="https://www.google.com"><button class="btn btn-primary">Know More</button></a>
@@ -83,7 +83,7 @@
           </div>
 
           <div class="carousel-item">
-            <img src="./img/img3.jpeg" class="d-block w-100" alt="...">
+            <img src="img/img3.jpeg" class="d-block w-100" alt="...">
             <div class="carousel-caption d-none d-md-block">
               <h1>Full Stack Developer - .MEAN</h1>
               <a href="https://www.google.com"><button class="btn btn-primary">Know More</button></a>
@@ -119,15 +119,15 @@
         <h2 class="display5 mt-5">What are we Doing?</h2>
       <div class="row">
           <div class="col-12 col-sm-6 col-md-4 col-md-4 col-lg-4 col-xl-4">
-            <img src="./img/html5.png" alt="HTML 5" srcset="" class="img-fluid mb-3">
+            <img src="img/html5.png" alt="HTML 5" srcset="" class="img-fluid mb-3">
             <h2>HTML 5</h2>
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-md-4 col-lg-4 col-xl-4">
-            <img src="./img/css3.png" alt="CSS 3" srcset="" class="img-fluid mb-3">
+            <img src="img/css3.png" alt="CSS 3" srcset="" class="img-fluid mb-3">
             <h2>CSS 3</h2>
           </div>
           <div class="col-12 col-sm-6 col-md-4 col-md-4 col-lg-4 col-xl-4">
-            <img src="./img/bootstrap.png" alt="Bootstrap" srcset="" class="img-fluid mb-3">
+            <img src="img/bootstrap.png" alt="Bootstrap" srcset="" class="img-fluid mb-3">
             <h2>Bootstrap</h2>
           </div>
 
